# wordle

./: Cargo.toml  README.md
solver/: Cargo.toml
solver/src/: main.rs
wordle/src/: main.rs
