[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.3.3" }
colored = "2.0.0"
directories = "4.0.1"
rand = "0.8.5"
rayon = "1.6.1"
smooth = "0.1.1"
spinoff = "0.7.0"
rkyv = { version = "0.7.39", features = ["validation", "copy"] }
bytecheck = { version = "0.6.9", features = ["simdutf8_std"] }
